[project]
name = "asa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==5.0.6",
    "django-cors-headers==4.3.1",
    "django-environ==0.11.2",
    "djangorestframework==3.15.1",
    "djangorestframework-simplejwt==5.3.1",
    "psycopg2-binary==2.9.9",
    "uvicorn[standard]==0.29.0",
]

[dependency-groups]
dev = [
    "pytest==8.2.0",
    "pytest-django==4.8.0",
]
